增加音乐功能

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,6 @@
 .content{
 	position: absolute;
 	/*top: -100%;*/
-	
 }
 
 .page{
@@ -233,4 +232,8 @@ img{
 	left: 25%;
 	top: 30%;
 	display: none;
+}
+
+.btn{
+	
 }
